WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
18082
REGRESSION (
r31287
): GMail does not work if user stylesheet is set
https://bugs.webkit.org/show_bug.cgi?id=18082
Summary
REGRESSION (r31287): GMail does not work if user stylesheet is set
Ismail Donmez
Reported
2008-03-25 14:53:20 PDT
How to reproduce; - Open your GMail inbox - Click Spam folder - Nothing happens - Click 2-3 times again - Now you see Loading... but its stuck there and never loads folder contents. Rolling back to
r31286
fixes the issue.
Attachments
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2008-03-25 14:54:38 PDT
I can't reproduce this. I wonder what is different...
Antti Koivisto
Comment 2
2008-03-25 20:43:51 PDT
Sending WebCore/ChangeLog Sending WebCore/loader/Cache.cpp Transmitting file data .. Committed revision 31307.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug