2008-03-25  Antti Koivisto  <antti@apple.com>

Reviewed by Oliver.

        Fix http://bugs.webkit.org/show_bug.cgi?id=18082
        REGRESSION (r31287): GMail does not work if user stylesheet is set

        Oops, my cache refactoring patch was missing these rather essential lines for
        user stylesheets. They would get reloaded repeatedly.

        * loader/Cache.cpp:
        (WebCore::Cache::requestUserCSSStyleSheet):



Canonical link: https://commits.webkit.org/24973@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@31307 268f45cc-cd09-0410-ab3c-d52691b4dbfc